infra/k8s/events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec: 
      containers:
        - name: events
          #image: ihbelda/events # local or docker hub
          image: us.gcr.io/silver-wall-388517/events
---
apiVersion: v1
kind: Service
metadata:
  name: events-srv
spec:
  selector:
    app: events
  ports:
    - name: events
      protocol: TCP
      port: 3000
      targetPort: 3000
