infra/k8s/users-mongo-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-mongo-srv
spec:
  selector:
    app: users-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
# Should be already created
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: users-mongo-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-mongo
  template:
    metadata:
      labels:
        app: users-mongo
    spec:
      containers:
        - name: users-mongo
          image: mongo
          volumeMounts:
            - name: users-mongo-storage
              mountPath: /data/db
      volumes:
        - name: users-mongo-storage
          persistentVolumeClaim:
            claimName: users-mongo-pvc
